Sidekiq enabled, emails for >9 sites. Deploying to Heroku

--- a/app/views/abn_mailer/email_abns.html.erb
+++ b/app/views/abn_mailer/email_abns.html.erb
@@ -1,8 +1,12 @@
 <p>Hi,</p>
 <p>Please find attached the requested ABN search results generated on <a href="https://findabns.herokuapp.com">https://findabns.herokuapp.com</a></p>
-<p>Regards,</p>
-<p>Strata Energy Services</p>
+<p>Regards,</br>
+Strata Energy Services</br>
+<a href="https://www.strataenergyservices.com.au">strataenergyservices.com.au</a></br>
+Suite 1.02, Level 1, 6 Eden Park Drive Macquarie Park NSW 2113</p>
+<%#<p><%= image_tag 'SES_Email_Logo.png' </p>%>
 </br>
+<hr>
 <p><table><tbody><tr><th>Name</th><th class="ABN">ABN</th><th>State</th><th>Postcode</th></tr>
     <% @allabns.each do |r| %>
       <tr>
