--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,12 +12,16 @@
         <%= f.text_area :list, :rows => 8, :value => @sptext %><%# 20, now 8 because of heroku timeouts meaning 8 rows is max. %>
     </p>
     <p>
+      <%= f.label 'State of interest (leave blank if multi-state):' %></p>
+      <p><%= f.text_field :state, :value => @state %>
+    </p>
+    <p>
       <%= f.label 'Email for sending longer results:' %></p>
       <p><%= f.text_field :email, :value => @email, :size => 50 %>
     </p>
     <p>
-      <%= f.label 'State of interest (leave blank if multi-state):' %></p>
-      <p><%= f.text_field :state, :value => @state %>
+      <%= f.label 'Filename (for email attachment):' %></p>
+      <p><%= f.text_field :filename, :value => @filename, :size => 30 %>
     </p>
     <p>
         <%= f.submit 'Find ABNs' %>
@@ -54,9 +58,9 @@
     <p><%#= link_to "Export ABNs as spreadsheet", root_path(export,format: "xlsx") %></p>
     <p><%#= link_to("Export ABNs as spreadsheet", :controller => "pages_controller", :action => "export") %></p>
     <p>The above link allows you to export the table to Excel (once generated).</p>
-    <p><%= link_to "Request email of ABNs", ABN_email_path(params.permit(:list,:email,:splist,:state,:emailthreshold,:abns,:commit)) %></p>
+    <p><%= link_to "Request email of ABNs", ABN_email_path(params.permit(:list,:email,:splist,:state,:emailthreshold,:abns,:commit,:filename)) %></p>
     <p>The above link allows you to manually email the table to your chosen email, for small lists (this is automatic for long lists).</p>
   <% end %>
 </section>
 <%# Really naive idea to avoid background job for long lists. Trying to get the last command in the view to organise emailing the results once the server completes the search for ABNs %>
-<%# AbnMailer.email_abns( @email,'test email for ABN', @allabns = abnlist(@splist, @state)).deliver_now if @splist != [] && @splist.size >= @emailthreshold %>
+<%# AbnMailer.email_abns( @email,@filename,'test email for ABN', @allabns = abnlist(@splist, @state)).deliver_now if @splist != [] && @splist.size >= @emailthreshold %>
