Added dummyemail path to test Heroku. Fixed Procfile

--- a/app/views/pages/dummyemail.html.erb
+++ b/app/views/pages/dummyemail.html.erb
@@ -8,3 +8,4 @@ Strata Energy Services</br>
 Suite 1.02, Level 1, 6 Eden Park Drive Macquarie Park NSW 2113</p>
 <%#<p><%= image_tag 'SES_Email_Logo.png' </p>%>
 </br>
+<p><%= link_to "Back to Home", root_path(params.permit(:list,:email,:splist,:state,:emailthreshold,:abns,:commit,:filename)) %></p>
