--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,8 @@
     </p>
     <p>
       <%= f.label 'State of interest (leave blank if multi-state):' %></p>
-      <p><%= f.text_field :state, :value => @state %>
+      <p><%#= f.text_field :state, :value => @state %>
+      <%= f.select :state, ['']+%w[NSW QLD VIC SA ACT NT WA TAS], :selected => @state %>
     </p>
     <p>
       <%= f.label 'Email for sending longer results:' %></p>
@@ -47,7 +48,8 @@
         <tr>
           <% r.each.with_index do |c,i| %>
             <%# <td><%= c > </td> %>
-            <td><%= (i != 1 ? c : link_to(c, "https://abr.business.gov.au/ABN/View?id=#{ c.gsub(' ','') }", :target => "_blank"))  unless c.nil? %></td>
+            <% url = c[/^htt/] ? c : "https://abr.business.gov.au/ABN/View?id=#{ c.gsub(' ','') }" %>
+            <td><%= (i != 1 ? c : link_to(c, url, :target => "_blank"))  unless c.nil? %></td>
           <% end unless r.none? %>
         </tr>
       <% end %>
